p2/config/app.yaml
---
# INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2
spec:
  ingressClassName: nginx
  rules:
    - host: app1.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-one
                port:
                  number: 80
    - host: app2.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-two
                port:
                  number: 80
    - host: app3.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-three
                port:
                  number: 80
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-three
                port:
                  number: 80
---
#APP1 SERVICE
apiVersion: v1
kind: Service
metadata:
  name: app-one
  labels:
    run: app-one
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  selector:
    app: app-one
---
#APP1 DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  selector:
    matchLabels:
      app: app-one
  replicas: 1
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: app-one
          image: app
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
              name: app-one
---
#APP2 SERVICE
---
#APP2 DEPLOYMENT
---
#APP3 SERVICE
---
#APP3 DEPLOYMENT
